tests/snapshots/run_wpt_conformance__coreml_reduceLogSumExp_float16_1D_constant_tensor_all_positive_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_log_sum_exp.https.any.js reduceLogSumExp float16 1D constant tensor all positive default options, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '<coreml-temp-model>' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([97, 58, 12, 69, 67, 72, 160, 61, 155, 47, 147, 52, 187, 63, 151, 67, 53, 65, 240, 68, 146, 68, 75, 58, 186, 50, 136, 72, 26, 68, 153, 68, 20, 52, 163, 60, 206, 70, 60, 69, 117, 72, 149, 72, 184, 69, 53, 53]);
  }

  nodes {
    [reduceLogSumExpOutput] = reduceLogSumExp(operand_0, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceLogSumExpOutput; }
}
